Adicionado visual login

--- a/Diarista/Views/Authentication/Login.cshtml
+++ b/Diarista/Views/Authentication/Login.cshtml
@@ -4,41 +4,42 @@
     ViewBag.Title = "Login";
 }
 
-<div class="container">
+<div class="container container-bg">
     <div class="row">
-        <div class="col-md-4 col-md-offset-4 text-center">
-            <h2>Painel de acesso</h2>
-        </div>
         <div class="col-md-4 col-md-offset-4">
-            <form method="post" action="@Url.Action("Login")">
-                <input type="hidden" name="remember" value="false" />
-                <div class="form-group">
-                    <label class="control-label" for="user">
-                        Nome do Usuário
-                    </label>
+            <div class="menu-center">
+                <h2>Acesso Restrito</h2>
+                <form method="post" action="@Url.Action("Login")">
+                    <input type="hidden" name="remember" value="false" />
+                    <input type="hidden" name="ReturnURL" value="@ViewBag.ReturnURL" />
+                    <div class="form-group">
+                        <label class="control-label" for="user">
+                            Nome do Usuário
+                        </label>
                         <input type="text" class="form-control" id="username" name="user" value=""
                                placeholder="Nome do Usuário de Acesso" autocomplete="off" required>
-                </div>
-                <div class="form-group">
-                    <label class="" for="password">
-                        Senha
-                    </label>
+                    </div>
+                    <div class="form-group">
+                        <label class="" for="password">
+                            Senha
+                        </label>
                         <input type="password" class="form-control" id="password" name="password" value=""
                                placeholder="Senha de Acesso" autocomplete="off" required>
-                </div>
-                <div class="form-group">
-                    <div class="checkbox-custom checkbox-inline checkbox-primary pull-left">
-                        <input type="checkbox" id="remember" name="remember" checked>
-                        <label for="inputCheckbox">Lembrar me</label>
                     </div>
-                    <label>
-                        <a class="text-right" href="forgot-password.html">Esqueceu a senha?</a>
-                    </label>
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary" style="width:100%;">Login</button>
-                </div>
-            </form>
+                    <div class="form-group">
+                        <div class="checkbox-custom checkbox-inline checkbox-primary pull-left">
+                            <input type="checkbox" id="remember" name="remember" checked>
+                            <label for="inputCheckbox">Lembrar me</label>
+                        </div>
+                        <label>
+                            <a class="text-right" href="forgot-password.html">Esqueceu a senha?</a>
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary" style="width:100%;">Login</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
