--- a/Diarista/Content/Site.css
+++ b/Diarista/Content/Site.css
@@ -35,20 +35,19 @@ body{
 }
 
 .menu-center {
-    width: 400px;
-    height: 600px;
-    margin: 0 auto;
-    top: 100px;
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    top: 0;
+    position: absolute;
     background-color: #ffffff;
     border: 2px solid #ea60e3;
-    border-radius: 10px;
+    border-radius: 15px;
     text-align: center;
-    margin-top: 190px;
-    
 }
 
 .menu-center h2{
-    padding-top: 100px;
+    padding-top: 20px;
 }
 
 .menu-center input{
