--- a/Diarista/Views/Authentication/Login.cshtml
+++ b/Diarista/Views/Authentication/Login.cshtml
@@ -5,38 +5,57 @@
 }
 
 <div class="container container-bg">
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="menu-center">
-                <h2>Acesso Restrito</h2>
-                <form method="post" action="@Url.Action("Login")">
+    <div>
+        <div class="row">
+            <div class="col-lg-3 col-lg-offset-4">
+                <form method="post" class="menu-center" action="@Url.Action("Login")">
+                    <h2>Acesso Restrito</h2>
                     <input type="hidden" name="remember" value="false" />
                     <input type="hidden" name="ReturnURL" value="@ViewBag.ReturnURL" />
-                    <div class="form-group">
-                        <label class="control-label" for="user">
-                            Nome do Usuário
-                        </label>
-                        <input type="text" class="form-control" id="username" name="user" value=""
-                               placeholder="Nome do Usuário de Acesso" autocomplete="off" required>
-                    </div>
-                    <div class="form-group">
-                        <label class="" for="password">
-                            Senha
-                        </label>
-                        <input type="password" class="form-control" id="password" name="password" value=""
-                               placeholder="Senha de Acesso" autocomplete="off" required>
-                    </div>
-                    <div class="form-group">
-                        <div class="checkbox-custom checkbox-inline checkbox-primary pull-left">
-                            <input type="checkbox" id="remember" name="remember" checked>
-                            <label for="inputCheckbox">Lembrar me</label>
+                    <div class="row">
+                        <div class="form-group">
+                            <label class="control-label" for="user">
+                                Nome do Usuário
+                            </label>
+                            <input type="text" class="form-control" id="email" name="email" value=""
+                                   placeholder="Nome do Usuário de Acesso" autocomplete="off" required>
                         </div>
-                        <label>
-                            <a class="text-right" href="forgot-password.html">Esqueceu a senha?</a>
-                        </label>
                     </div>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary" style="width:100%;">Login</button>
+                    <div class="row">
+                        <div class="form-group">
+                            <label class="" for="password">
+                                Senha
+                            </label>
+                            <input type="password" class="form-control" id="password" name="password" value=""
+                                   placeholder="Senha de Acesso" autocomplete="off" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <div class="checkbox-custom checkbox-inline checkbox-primary pull-left">
+                                    <input type="checkbox" id="remember" name="remember" checked>
+                                    <label for="inputCheckbox">Lembrar me</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <label>
+                                <a class="text-right" href="forgot-password.html">Esqueceu a senha?</a>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-primary form-control" style="width:100%;">Login</button>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                @Html.ActionLink("Cadastre-se", "Cadastrar", routeValues: null, htmlAttributes: new { @class = "btn btn-primary form-control" })
+                            </div>
+                        </div>
                     </div>
                 </form>
             </div>
