--- a/Diarista/Views/Servico/Cadastrar.cshtml
+++ b/Diarista/Views/Servico/Cadastrar.cshtml
@@ -49,7 +49,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <button type="submit" class="btn btn-default">Criar</button>
         </div>
     </div>
 </div>
