--- a/Diarista/Views/Authentication/Cadastrar.cshtml
+++ b/Diarista/Views/Authentication/Cadastrar.cshtml
@@ -3,102 +3,103 @@
 @{
     ViewBag.Title = "Cadastrar";
 }
+<div class="bg-imagem">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3 menu-center">
+                <h2>Cadastrar Usuário</h2>
+                @using (Html.BeginForm())
+                {
+                    <div class="row">
+                        @Html.AntiForgeryToken()
 
-<div class="container container-bg">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3 menu-center">
-            <h2>Cadastrar Usuário</h2>
-            @using (Html.BeginForm())
-            {
-                <div class="row">
-                    @Html.AntiForgeryToken()
-
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            @Html.Label("E-mail", htmlAttributes: new { @class = "control-label" })
-                            <div>
-                                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            @Html.Label("CPF", htmlAttributes: new { @class = "control-label" })
-                            <div>
-                                @Html.EditorFor(model => model.Cpf, new { htmlAttributes = new { @class = "form-control cpf" } })
-                                @Html.ValidationMessageFor(model => model.Cpf, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            @Html.Label("Senha", htmlAttributes: new { @class = "control-label" })
-                            <div>
-                                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", type = "password" } })
-                                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            @Html.Label("Confirmar Senha", htmlAttributes: new { @class = "control-label" })
-                            <div>
-                                @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control", type = "password" } })
-                                @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            @Html.Label("Nome", htmlAttributes: new { @class = "control-label" })
-                            <div>
-                                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            @Html.Label("Telefone", htmlAttributes: new { @class = "control-label" })
-                            <div>
-                                @Html.EditorFor(model => model.Telefone, new { htmlAttributes = new { @class = "form-control tel" } })
-                                @Html.ValidationMessageFor(model => model.Telefone, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            @Html.Label("Tipo de Usuário", htmlAttributes: new { @class = "control-label" })
-                            <div>
-                                @Html.EnumDropDownListFor(model => model.TipoUsuario, htmlAttributes: new { @class = "form-control" })
-                                @Html.ValidationMessageFor(model => model.TipoUsuario, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            @Html.Label("Descricao", htmlAttributes: new { @class = "control-label" })
-                            <div>
-                                @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="form-group">
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="col-md-6">
-                            <button type="submit" class="btn btn-success">Cadastrar</button>
+                            <div class="form-group">
+                                @Html.Label("E-mail", htmlAttributes: new { @class = "control-label" })
+                                <div>
+                                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
                         </div>
                         <div class="col-md-6">
-                            <button class="btn btn-default">@Html.ActionLink("Voltar", "Index")</button>
+                            <div class="form-group">
+                                @Html.Label("CPF", htmlAttributes: new { @class = "control-label" })
+                                <div>
+                                    @Html.EditorFor(model => model.Cpf, new { htmlAttributes = new { @class = "form-control cpf" } })
+                                    @Html.ValidationMessageFor(model => model.Cpf, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                @Html.Label("Senha", htmlAttributes: new { @class = "control-label" })
+                                <div>
+                                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", type = "password" } })
+                                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                @Html.Label("Confirmar Senha", htmlAttributes: new { @class = "control-label" })
+                                <div>
+                                    @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control", type = "password" } })
+                                    @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                @Html.Label("Nome", htmlAttributes: new { @class = "control-label" })
+                                <div>
+                                    @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                @Html.Label("Telefone", htmlAttributes: new { @class = "control-label" })
+                                <div>
+                                    @Html.EditorFor(model => model.Telefone, new { htmlAttributes = new { @class = "form-control tel" } })
+                                    @Html.ValidationMessageFor(model => model.Telefone, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                @Html.Label("Tipo de Usuário", htmlAttributes: new { @class = "control-label" })
+                                <div>
+                                    @Html.EnumDropDownListFor(model => model.TipoUsuario, htmlAttributes: new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.TipoUsuario, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                @Html.Label("Descricao", htmlAttributes: new { @class = "control-label" })
+                                <div>
+                                    @Html.EditorFor(model => model.Descricao, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Descricao, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            }
+                    <div class="row">
+                        <div class="form-group">
+                            <div class="col-md-6">
+                                <button type="submit" class="btn btn-success">Cadastrar</button>
+                            </div>
+                            <div class="col-md-6">
+                                <button class="btn btn-default">@Html.ActionLink("Voltar", "Index")</button>
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
         </div>
     </div>
 </div>
