--- a/Diarista/Views/Authentication/Login.cshtml
+++ b/Diarista/Views/Authentication/Login.cshtml
@@ -3,53 +3,54 @@
 @{
     ViewBag.Title = "Login";
 }
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <form method="post" class="menu-center" action="@Url.Action("Login")">
-                <h2>Acesso Restrito</h2>
-                <input type="hidden" name="remember" value="false" />
-                <input type="hidden" name="ReturnURL" value="@ViewBag.ReturnURL" />
-                <div class="row">
-                    <div class="form-group">
-                        <label class="control-label" for="user">
-                            Nome do Usuário
-                        </label>
-                        <input type="text" class="form-control" id="email" name="email" value=""
-                               placeholder="Nome do Usuário de Acesso" autocomplete="off" required>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="form-group">
-                        <label class="" for="password">
-                            Senha
-                        </label>
-                        <input type="password" class="form-control" id="password" name="password" value=""
-                               placeholder="Senha de Acesso" autocomplete="off" required>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="form-group">
-                        <div class="checkbox-custom checkbox-inline checkbox-primary">
-                            <input type="checkbox" id="remember" name="remember" checked>
-                            <label for="inputCheckbox">Lembrar me</label>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-6">
+<div class="bg-imagem">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <form method="post" class="menu-center" action="@Url.Action("Login")">
+                    <h2>Acesso Restrito</h2>
+                    <input type="hidden" name="remember" value="false" />
+                    <input type="hidden" name="ReturnURL" value="@ViewBag.ReturnURL" />
+                    <div class="row">
                         <div class="form-group">
-                            <button type="submit" class="btn btn-success form-control" style="width:100%;">Login</button>
+                            <label class="control-label" for="user">
+                                Nome do Usuário
+                            </label>
+                            <input type="text" class="form-control" id="email" name="email" value=""
+                                   placeholder="Nome do Usuário de Acesso" autocomplete="off" required>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="row">
                         <div class="form-group">
-                            @Html.ActionLink("Cadastre-se", "Cadastrar", routeValues: null, htmlAttributes: new { @class = "btn btn-primary form-control" })
+                            <label class="" for="password">
+                                Senha
+                            </label>
+                            <input type="password" class="form-control" id="password" name="password" value=""
+                                   placeholder="Senha de Acesso" autocomplete="off" required>
                         </div>
                     </div>
-                </div>
-            </form>
+                    <div class="row">
+                        <div class="form-group">
+                            <div class="checkbox-custom checkbox-inline checkbox-primary">
+                                <input type="checkbox" id="remember" name="remember" checked>
+                                <label for="inputCheckbox">Lembrar me</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-success form-control" style="width:100%;">Login</button>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                @Html.ActionLink("Cadastre-se", "Cadastrar", routeValues: null, htmlAttributes: new { @class = "btn btn-primary form-control" })
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
