--- a/Diarista/Views/Servico/Cadastrar.cshtml
+++ b/Diarista/Views/Servico/Cadastrar.cshtml
@@ -19,7 +19,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.DataContratacao, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.DataContratacao, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.DataContratacao, new { htmlAttributes = new { @value = Model.DataContratacao.ToString("dd/MM/yyyy"), @class = "datepicker form-control" } })
             @Html.ValidationMessageFor(model => model.DataContratacao, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -49,12 +49,12 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Criar</button>
+            <input type="submit" value="Create" class="btn btn-default" />
         </div>
     </div>
 </div>
 }
 
 <div>
-    @Html.ActionLink("Voltar", "Index", "Cliente")
+    @Html.ActionLink("Back to List", "Index", "Cliente")
 </div>
